# HRI_Adversarial_Robot_Project

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  entrypoint.sh
UR5_control_logic/: README.md
image-generation/: README.md  co_painter.py  co_painter_memory.py  config.py  image_to_svg.py  main.py  make_axes_grid.py  paint_with_gemini.py  requirements.txt  robot_co_painter.py  trace_skeleton.py  web_co_painter.py
image-generation/brute_force_prompting/: brute_force_prompts.py
jack_cnn_test/: .gitignore  cnn_test.py  data_proccessing.py  losses.py  models.py  trainer.py
jack_genai_test/: .gitignore  gemini_test.py
jack_genai_test/temp_files/: 101725_144136_text_0.txt  101725_144136_text_1.txt  101725_144136_text_2.txt  101725_144333_text_0.txt  101725_144333_text_1.txt  101725_144333_text_2.txt  101725_144719_text_0.txt  101725_144719_text_1.txt  101725_144719_text_2.txt  101725_145135_text_0.txt  101725_145135_text_1.txt  101725_145135_text_2.txt  101725_145542_text_0.txt  101725_145542_text_1.txt  101725_145542_text_2.txt  101725_150157_text_0.txt  101725_150157_text_1.txt  101725_150157_text_2.txt  101925_024956_text_0.txt  101925_024956_text_1.txt  101925_024956_text_2.txt  101925_025629_text_0.txt  101925_025629_text_1.txt  101925_025629_text_2.txt  101925_030017_text_0.txt  101925_030017_text_1.txt  101925_030017_text_2.txt  101925_030405_text_0.txt  101925_030405_text_1.txt  101925_030405_text_2.txt  (+11 more)
jack_test/: README.md  gemini_test.py
paint_app/: index.html
ros2_ws/: .gitignore  cyclonedds.xml
ros2_ws/src/ur_draw_cmake/: CMakeLists.txt  package.xml
ros2_ws/src/ur_draw_cmake/action/: DrawStrokes.action
ros2_ws/src/ur_draw_cmake/launch/: test_launch.py
ros2_ws/src/ur_draw_cmake/src/: moveit_service.cpp
ros2_ws/src/ur_draw_cmake/srv/: DrawStroke.srv  MoveToPose.srv
survey/: analysis_survey.py  questionnaire_list.py  survey_webapp.py
tests/: README.md
(+28 files in other folders)
